k8s/staging/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: staging
  labels:
    app: redis
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - name: redis
      port: 6379
      targetPort: redis
