k8s/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: staging
  labels:
    app: auth
spec:
  type: LoadBalancer
  selector:
    app: auth
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
