k8s/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth
  namespace: staging
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "auth-staging-ip"
    networking.gke.io/managed-certificates: "auth-staging-cert"
    networking.gke.io/v1beta1.FrontendConfig: "auth-staging-fc"
spec:
  ingressClassName: gce
  rules:
    - host: auth-staging.shariski.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 80
